--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
+<!--     <script src="/solutions.js" defer></script> -->
     
     <!-- import the p5.js library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
